Fix spacing on home page.

--- a/source/stylesheets/home.css
+++ b/source/stylesheets/home.css
@@ -3,6 +3,10 @@
   margin: 10px auto;
 }
 
+  .row {
+    width: 988px;
+  }
+
   .left {
     width: 724px;
   }
